{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 18,
  "lineage": "39f57828-c282-3a41-e533-93d67ddec318",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099ab524dedc751c6",
            "arn": "arn:aws:ec2:us-east-1:882354390038:elastic-ip/eipalloc-099ab524dedc751c6",
            "domain": "vpc",
            "id": "eipalloc-099ab524dedc751c6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-215-201-173.compute-1.amazonaws.com",
            "public_ip": "44.215.201.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:internet-gateway/igw-03e55c391bba0a93c",
            "id": "igw-03e55c391bba0a93c",
            "owner_id": "882354390038",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099ab524dedc751c6",
            "association_id": "eipassoc-0303e7816218bc7e4",
            "connectivity_type": "public",
            "id": "nat-0846d4b364dc4355d",
            "network_interface_id": "eni-08207a569a83b79f0",
            "private_ip": "10.0.1.132",
            "public_ip": "44.215.201.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0170dc256597e0694",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb60d4f69f691b711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0846d4b364dc4355d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb60d4f69f691b71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03e55c391bba0a93c",
            "id": "r-rtb-0e3c0af9b58ec0d1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3c0af9b58ec0d1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:route-table/rtb-0bb60d4f69f691b71",
            "id": "rtb-0bb60d4f69f691b71",
            "owner_id": "882354390038",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:route-table/rtb-0e3c0af9b58ec0d1d",
            "id": "rtb-0e3c0af9b58ec0d1d",
            "owner_id": "882354390038",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09544a676ab29956a",
            "route_table_id": "rtb-0bb60d4f69f691b71",
            "subnet_id": "subnet-091ddc87b92038a5b"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eb6c094e1f3f8cb",
            "route_table_id": "rtb-0bb60d4f69f691b71",
            "subnet_id": "subnet-0bcefe4f332fab478"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de70554daa8330a9",
            "route_table_id": "rtb-0e3c0af9b58ec0d1d",
            "subnet_id": "subnet-0170dc256597e0694"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0483a41a7c583733b",
            "route_table_id": "rtb-0e3c0af9b58ec0d1d",
            "subnet_id": "subnet-0ca091698da0197f0"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:subnet/subnet-091ddc87b92038a5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ddc87b92038a5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882354390038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:subnet/subnet-0bcefe4f332fab478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcefe4f332fab478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882354390038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:subnet/subnet-0170dc256597e0694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0170dc256597e0694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882354390038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:subnet/subnet-0ca091698da0197f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca091698da0197f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882354390038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-08fa3922d00f70891"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882354390038:vpc/vpc-08fa3922d00f70891",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05df00a66dcc930f3",
            "default_route_table_id": "rtb-0eeb8fd0327e3db71",
            "default_security_group_id": "sg-0d07c8dda0f870fd0",
            "dhcp_options_id": "dopt-02b2eedc3fc498490",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fa3922d00f70891",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eeb8fd0327e3db71",
            "owner_id": "882354390038",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}